This is my gradeCheckingSystem

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     
         <div class="main">
-            <h1>GRADE CHECK SYSTEM</h1>
+            <h1>GRADE CHECKING SYSTEM</h1>
             <marquee behavior="" direction=""><h2>Check Your Grade👀</h2></marquee>
             <input type="number" placeholder="Type in the score" id="input">
             <button onclick="checkGrade()">Grade</button>
